@@ -139,86 +139,3 @@ function($scope, $rootScope, $routeParams, Luke, CoreSystem, Update, Replication
   $scope.refresh();
 });
 
-/*******
-
-// @todo admin-extra
-    var core_basepath = this.active_core.attr( 'data-basepath' );
-    var content_element = $( '#content' );
-
-    content_element
-      .removeClass( 'single' );
-
-    if( !app.core_menu.data( 'admin-extra-loaded' ) )
-    {
-      app.core_menu.data( 'admin-extra-loaded', new Date() );
-
-      $.get
-      (
-        core_basepath + '/admin/file/?file=admin-extra.menu-top.html&contentType=text/html;charset=utf-8',
-        function( menu_extra )
-        {
-          app.core_menu
-            .prepend( menu_extra );
-        }
-      );
-
-      $.get
-      (
-        core_basepath + '/admin/file/?file=admin-extra.menu-bottom.html&contentType=text/html;charset=utf-8',
-        function( menu_extra )
-        {
-          app.core_menu
-            .append( menu_extra );
-        }
-      );
-    }
-
-
-
-////////////////////////////////// ADMIN EXTRA
-        $.ajax
-        (
-          {
-            url : core_basepath + '/admin/file/?file=admin-extra.html',
-            dataType : 'html',
-            context : $( '#admin-extra', dashboard_element ),
-            beforeSend : function( xhr, settings )
-            {
-              $( 'h2', this )
-                .addClass( 'loader' );
-
-              $( '.message', this )
-                .show()
-                .html( 'Loading' );
-
-              $( '.content', this )
-                .hide();
-            },
-            success : function( response, text_status, xhr )
-            {
-              $( '.message', this )
-                .hide()
-                .empty();
-
-              $( '.content', this )
-                .show()
-                .html( response );
-            },
-            error : function( xhr, text_status, error_thrown)
-            {
-              this
-                .addClass( 'disabled' );
-
-              $( '.message', this )
-                .show()
-                .html( 'We found no "admin-extra.html" file.' );
-            },
-            complete : function( xhr, text_status )
-            {
-              $( 'h2', this )
-                .removeClass( 'loader' );
-            }
-          }
-        );
-
-***/
