@@ -205,23 +205,6 @@ limitations under the License.
     </div>
 
   </div>
-  <div class="clearfix">
-
-    <div class="block" id="admin-extra">
-
-      <h2><span>Admin Extra</span></h2>
-
-      <div class="message-container">
-        <div class="message"></div>
-      </div>
-
-      <div class="content">
-
-      </div>
-
-    </div>
-
-  </div>
 
 
 </div>
