@@ -236,6 +236,8 @@ Other Changes
 
 * SOLR-9588: Remove Guava dependency from SolrJ (Ishan Chattopadhyaya, noble)
 
+* SOLR-8140: Remove mentions of unimplemented admin-extra from the new Admin UI
+
 ==================  6.2.1 ==================
 
 Bug Fixes
